fix overflow

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
 
 /* background-color: var(--mainColor); */
 
+* {
+    overflow-x: clip;
+}
+
 html {
     scroll-behavior: smooth;
 }
